--- a/dobot/style.css
+++ b/dobot/style.css
@@ -5,32 +5,20 @@ body{
 h1{
 	color: blue
 	margin-left: 20px;
-
-
 }
 .btn {
-  background: #8442ff;
-  background-image: -webkit-linear-gradient(top, #8442ff, #142175);
-  background-image: -moz-linear-gradient(top, #8442ff, #142175);
-  background-image: -ms-linear-gradient(top, #8442ff, #142175);
-  background-image: -o-linear-gradient(top, #8442ff, #142175);
-  background-image: linear-gradient(to bottom, #8442ff, #142175);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
   font-family: Arial;
-  color: #aeff00;
-  font-size: 19px;
+  color: #ffffff;
+  font-size: 16px;
+  background: #00BCBD;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
 
 .btn:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #349fd9);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #349fd9);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #349fd9);
-  background-image: -o-linear-gradient(top, #3cb0fd, #349fd9);
-  background-image: linear-gradient(to bottom, #3cb0fd, #349fd9);
+  background: #1bf5f5;
   text-decoration: none;
 }
