--- a/final/style.css
+++ b/final/style.css
@@ -45,7 +45,7 @@ table {
 body {
 	background-color: #212121;
 	color: white;
-	font-family: Gotham HTF;
+	font-family: Helvetica;
 	font-weight: 100;
     letter-spacing: 2px; 
 }
@@ -109,7 +109,7 @@ h2 {
   	border-radius: 0px;
   	color: #ffffff;
   	font-size: 14px;
-  	font-family: Gotham HTF;
+  	font-family: Helvetica;
   	font-weight: 100;
   	letter-spacing: 2px;
   	background: #212121;
